Modify others/Makefile: Use $@ to refer target name.

--- a/others/Makefile
+++ b/others/Makefile
@@ -4,7 +4,7 @@ hw_out = hello_world_openmp_parallel.out
 hw_c = hello_world_openmp_parallel.c
 
 $(hw_out): $(hw_c)
-	gcc -fopenmp -o $(hw_out) $(hw_c)
+	gcc -fopenmp -o $@ $(hw_c)
 
 run1: $(hw_out)
 	./$(hw_out)
@@ -30,7 +30,7 @@ run1: $(hw_out)
 pid_out = pid.out
 pid_c = process_id.c
 $(pid_out): $(pid_c)
-	gcc -o $(pid_out) $(pid_c)
+	gcc -o $@ $(pid_c)
 
 run2: $(pid_out)
 	./$(pid_out)
@@ -38,7 +38,7 @@ run2: $(pid_out)
 fork_out = fork.out
 fork_c = fork_process.c
 $(fork_out): $(fork_c)
-	gcc -o $(fork_out) $(fork_c)
+	gcc -o $@ $(fork_c)
 
 run3: $(fork_out)
 	./$(fork_out)
@@ -46,4 +46,4 @@ run3: $(fork_out)
 signal_out = signals.out
 signal_c = signals.c
 $(signal_out): $(signal_c)
-	gcc -o $(signal_out) $(signal_c)
+	gcc -o $@ $(signal_c)
